# gwm

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
examples/: config.toml
src/: app.rs  error.rs  hooks.rs  input.rs  lib.rs  main.rs  theme.rs  ui.rs
src/action/: dispatcher.rs  handler.rs  mod.rs  types.rs
src/config/: default.rs  keybinding.rs  loader.rs  mod.rs  types.rs
src/git/: mod.rs  worktree.rs
src/tui/: colors.rs  event.rs  mod.rs  terminal.rs  ui.rs
src/tui/widgets/: branch_selector.rs  confirm_dialog.rs  create_worktree_form.rs  detail_panel.rs  help_footer.rs  mod.rs  worktree_list.rs
tests/: action_test.rs  app_test.rs  form_test.rs  git_test.rs  git_workflow_test.rs  navigation_test.rs
tests/common/: mod.rs
