[package]
name = "gwm"
version = "0.1.0"
edition = "2021"
authors = ["tosaka07"]
description = "A TUI manager for Git Worktrees"
license = "MIT"
repository = "https://github.com/tosaka07/gwm"
keywords = ["git", "worktree", "tui", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.28"
tachyonfx = "0.22"

# Git (vendored libgit2 to avoid OpenSSL dependency)
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "process", "sync", "time", "macros"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# File system
dirs = "5.0"
glob = "0.3"

# Error handling
thiserror = "2.0"
color-eyre = "0.6"

# Utilities
unicode-width = "0.2"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
