[package]
name = "gwm"
version = "0.2.0"
edition = "2021"
description = "Git Worktree Manager - A TUI application for managing git worktrees"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.28"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
tokio = { version = "1", features = ["rt-multi-thread", "process", "sync", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
glob = "0.3"
thiserror = "2.0"
color-eyre = "0.6"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"] }
